--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
         // Storing data in form of JSON
         var data = await response.json();
         
-        console.log(data);
+        // console.log(data);
        
     }
 
@@ -53,7 +53,7 @@
 //         return response.json();
 //     })
 //     .then(data => {
-//        console.log(data.messages);
+//        // console.log(data.messages);
 //     })
 //     .catch(function(error) {
 //         document.getElementById('messages').value = error;
